temporary alert added

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ function getUrlParam(parameter, defaultvalue){
 
 var sn = getUrlParam('SN','');
 console.log(""+sn);
+alert(""+sn);
 
 </script>
 </body>
