added code to auto redirect to gen 2 manual ...!!

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h1 class="mt-5">List Of All Manuals</h1>
         <!-- <p class="lead">Complete with pre-defined file paths and responsive navigation!</p> -->
         <ul class="list-group">
-          <li class="list-group-item"><a href="ibe_manual.pdf">IBE Gen 2 English</a></li>
-          <li class="list-group-item"><a href="ibe_manual_old.pdf">IBE Gen 1 English</a></li>
+          <!-- <li class="list-group-item"><a href="ibe_manual.pdf">IBE Manual English</a></li> -->
+          <li class="list-group-item"><a href="ibe_manual_old.pdf">IBE Manual English</a></li>
         </ul>
       </div>
     </div>
@@ -84,8 +84,9 @@ function getUrlParam(parameter, defaultvalue){
 }
 
 var sn = getUrlParam('SN','');
-console.log(""+sn);
-alert(""+sn);
+// if(sn!==''){
+  window.location.replace("https://ue-life-sciences.github.io/ibe_manual/ibe_manual.pdf");
+// }
 
 </script>
 </body>
