changed defualt manual to gen 2 manual .....!

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <h1 class="mt-5">List Of All Manuals</h1>
         <!-- <p class="lead">Complete with pre-defined file paths and responsive navigation!</p> -->
         <ul class="list-group">
-          <!-- <li class="list-group-item"><a href="ibe_manual.pdf">IBE Manual English</a></li> -->
-          <li class="list-group-item"><a href="ibe_manual_old.pdf">IBE Manual English</a></li>
+          <li class="list-group-item"><a href="ibe_manual.pdf">IBE Manual English</a></li>
+          <!-- <li class="list-group-item"><a href="ibe_manual_old.pdf">IBE Manual English</a></li> -->
         </ul>
       </div>
     </div>
