--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="This page lists all manuals of IBreastExam device.">
   <meta name="author" content="Aman Satija">
 
   <title>IBE Manuals</title>
