--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- <p class="lead">Complete with pre-defined file paths and responsive navigation!</p> -->
         <ul class="list-group">
           <li class="list-group-item"><a href="ibreastexam_manual.pdf">IBE Manual English</a></li>
-          <li class="list-group-item"><a href="ibe_manual.pdf">IBE Manual English</a></li>
+<!--           <li class="list-group-item"><a href="ibe_manual.pdf">IBE Manual English</a></li> -->
           <!-- <li class="list-group-item"><a href="ibe_manual_old.pdf">IBE Manual English</a></li> -->
         </ul>
       </div>
