--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ function getUrlParam(parameter, defaultvalue){
 var sn = getUrlParam('SN','');
 // if(sn!==''){
   window.location.replace("https://ue-life-sciences.github.io/ibe_manual/ibreastexam_manual.pdf");
-
+// window.location.replace("https://ue-life-sciences.github.io/ibe_manual/ibe_manual.pdf");
 // }
 
 </script>
