--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <!-- <p class="lead">Complete with pre-defined file paths and responsive navigation!</p> -->
         <ul class="list-group">
           <li class="list-group-item"><a href="ibreastexam_manual.pdf">IBE Manual English</a></li>
+            <li class="list-group-item"><a href="ibe_manual_20191223.pdf">IBE Manual English</a></li>
 <!--           <li class="list-group-item"><a href="ibe_manual.pdf">IBE Manual English</a></li> -->
           <!-- <li class="list-group-item"><a href="ibe_manual_old.pdf">IBE Manual English</a></li> -->
         </ul>
@@ -87,6 +88,7 @@ function getUrlParam(parameter, defaultvalue){
 var sn = getUrlParam('SN','');
 // if(sn!==''){
   window.location.replace("https://ue-life-sciences.github.io/ibe_manual/ibreastexam_manual.pdf");
+  window.location.replace("https://ue-life-sciences.github.io/ibe_manual/ibe_manual_20191223.pdf");
 // window.location.replace("https://ue-life-sciences.github.io/ibe_manual/ibe_manual.pdf");
 // }
 
